--- a/.github/workflows/concurrent-search.yml
+++ b/.github/workflows/concurrent-search.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, macos-latest]  # precommit on ubuntu-latest is run as a part of the gradle-check workflow
+        os: [ubuntu-latest]  # precommit on ubuntu-latest is run as a part of the gradle-check workflow
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
