--- a/.github/workflows/concurrent-search.yml
+++ b/.github/workflows/concurrent-search.yml
@@ -24,15 +24,15 @@ jobs:
           ./gradlew internalClusterTest -Dopensearch.experimental.feature.concurrent_segment_search.enabled=true
       - name: Upload Coverage Integration Test Report
         if: always()
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
         with:
-          files: ./build/reports/jacoco/test/integrationTestReport.xml
+          files: /home/runner/work/OpenSearch/OpenSearch/server/build/reports/tests/internalClusterTest/index.html
       - name: Run Gradle unit tests
         if: always()
         run: |
           ./gradlew test -Dopensearch.experimental.feature.concurrent_segment_search.enabled=true
       - name: Upload Coverage Unit Test Report
         if: always()
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
         with:
-          files: ./build/reports/jacoco/test/unitTestReport.xml
+          files: /home/runner/work/OpenSearch/OpenSearch/server/build/reports/tests/test/index.html
