--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: '*/2 * * * *' # every 2 minutes
+    - cron: '0 */2 * * *' # every 2 hours
   workflow_dispatch: # on button click
 
 jobs:
