--- a/.github/workflows/concurrent-search.yml
+++ b/.github/workflows/concurrent-search.yml
@@ -4,35 +4,34 @@ name: concurrent search tests
 on: [push, pull_request]
 
 jobs:
-  precommit:
+  sync:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest]  # precommit on ubuntu-latest is run as a part of the gradle-check workflow
     steps:
+      - uses: tgymnich/fork-sync@v1.8
+        with:
+          token: ${{ secrets.PERSONAL_TOKEN }}
+          owner: neetikasinghal
+          base: main
+          head: main
       - uses: actions/checkout@v2
       - name: Set up JDK 11
+        if: always()
         uses: actions/setup-java@v2
         with:
           java-version: 11
           distribution: adopt
       - name: Build the repo
+        if: always()
         run: |
           ./gradlew assemble -x :distribution:docker:buildArm64DockerImage -x :distribution:docker:buildDockerImage -x :distribution:docker:buildPpc64leDockerImage -x :distribution:docker:docker-export:exportDockerImage -x :distribution:docker:buildS390xDockerImage -x :distribution:docker:docker-ppc64le-export:exportDockerImage -x :distribution:docker:docker-s390x-export:exportDockerImage
-      - name: Run Gradle integration tests
-        run: |
-          ./gradlew internalClusterTest -Dopensearch.experimental.feature.concurrent_segment_search.enabled=true
-      - name: Upload Coverage Integration Test Report
-        if: always()
-        uses: codecov/codecov-action@v3
-        with:
-          files: /home/runner/work/OpenSearch/OpenSearch/server/build/reports/tests/internalClusterTest/index.html
       - name: Run Gradle unit tests
         if: always()
         run: |
           ./gradlew test -Dopensearch.experimental.feature.concurrent_segment_search.enabled=true
-      - name: Upload Coverage Unit Test Report
+      - name: Run Gradle integration tests
         if: always()
-        uses: codecov/codecov-action@v3
-        with:
-          files: /home/runner/work/OpenSearch/OpenSearch/server/build/reports/tests/test/index.html
+        run: |
+          ./gradlew internalClusterTest --parallel -Dopensearch.experimental.feature.concurrent_segment_search.enabled=true
