Update sync.yml to sync every hour
Signed-off-by: Neetika Singhal <neetikasinghal16@gmail.com>

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: '0 */2 * * *' # every 2 hours
+    - cron: '0 */1 * * *' # every 1 hour
   workflow_dispatch: # on button click
 
 jobs:
