--- a/.github/workflows/concurrent-search.yml
+++ b/.github/workflows/concurrent-search.yml
@@ -1,21 +1,16 @@
 ---
-name: concurrent search tests
+name: Concurrent Search UTs and ITs
 
-on: [push, pull_request]
+on:
+  workflow_dispatch: # on button click
 
 jobs:
-  sync:
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest]  # precommit on ubuntu-latest is run as a part of the gradle-check workflow
     steps:
-      - uses: tgymnich/fork-sync@v1.8
-        with:
-          token: ${{ secrets.PERSONAL_TOKEN }}
-          owner: neetikasinghal
-          base: main
-          head: main
       - uses: actions/checkout@v2
       - name: Set up JDK 11
         if: always()
